# BetterDefaultCPMV

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  INDEX.md  LICENSE  PUBLISHING.md  README.md  START_HERE.md  TESTING.md
.github/workflows/: README.md  ci.yml  pages.yml  publish-crates.yml  release.yml
benches/: copy_benchmarks.rs
docs/: index.html
release/BetterDefaultCPMV-v0.2.0/docs/: DEVELOPMENT.md  QUICKSTART.md
src/: cli.rs  config.rs  copy.rs  error.rs  json_output.rs  lib.rs  move.rs  output.rs  parallel.rs  progress.rs  prompt.rs  reflink.rs  resume.rs  verify.rs
tests/: integration_tests.rs
