[package]
name = "better-cp"
version = "0.2.0"
edition = "2021"
authors = ["BetterDefaultCPMV Team"]
description = "Modern replacement for cp/mv with progress, safety, and resume"
repository = "https://github.com/betterdefaultcpmv/better-cp"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "better-cp"
path = "src/bin/better_cp.rs"

[[bin]]
name = "better-mv"
path = "src/bin/better_mv.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
console = "0.15"
humansize = "2.1"
dirs = "5.0"
tempfile = "3.8"
walkdir = "2.4"
chrono = "0.4"
sys-info = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
